feature/HU-018 finalized